Generate surefire test reports for site